--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -215,26 +215,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Mat_Island5
-MRUItem1=/Game/Materials/Blue_Rose_Plant_Stem
-MRUItem2=/Game/Materials/Blue_Rose_Plant_Stem_Inst
-MRUItem3=/Game/Materials/Blue_Rose_Plant_Flower
-MRUItem4=/Game/Materials/Blue_Rose_Plant_Flower_Inst
-MRUItem5=/Game/Materials/Blue_Rose_Plant_Leaf
-MRUItem6=/Game/Materials/Blue_Rose_Plant_Leaf_Inst
-MRUItem7=/Game/Geometry/Meshes/Plants/Blue_Rose_Plant
-MRUItem8=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
-MRUItem9=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
-MRUItem10=/Game/Geometry/Meshes/Plants/DualFlowers/Forest_Dual_Flowers_LP
-MRUItem11=/Game/Materials/Twisted_Grass_Plant_Flower
-MRUItem12=/Game/Materials/Twisted_Grass_Plant_Flower_Inst
-MRUItem13=/Game/Materials/Twisted_Grass_Plant_Stem
-MRUItem14=/Game/Materials/Twisted_Grass_Plant_Stem_Inst
-MRUItem15=/Game/Materials/Twisted_Grass_Plant_LEaf
-MRUItem16=/Game/Materials/Twisted_Grass_Plant_LEaf_Inst
-MRUItem17=/Game/Geometry/Meshes/Plants/Twisted_Grass_Plant
-MRUItem18=/Game/Materials/Short_Wide_Plant_Leaf
-MRUItem19=/Game/Materials/Short_Wide_Plant_Anther
+MRUItem0=/Game/Building
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/Materials/Mat_Island5
+MRUItem5=/Game/Materials/Blue_Rose_Plant_Stem
+MRUItem6=/Game/Materials/Blue_Rose_Plant_Stem_Inst
+MRUItem7=/Game/Materials/Blue_Rose_Plant_Flower
+MRUItem8=/Game/Materials/Blue_Rose_Plant_Flower_Inst
+MRUItem9=/Game/Materials/Blue_Rose_Plant_Leaf
+MRUItem10=/Game/Materials/Blue_Rose_Plant_Leaf_Inst
+MRUItem11=/Game/Geometry/Meshes/Plants/Blue_Rose_Plant
+MRUItem12=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
+MRUItem13=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
+MRUItem14=/Game/Geometry/Meshes/Plants/DualFlowers/Forest_Dual_Flowers_LP
+MRUItem15=/Game/Materials/Twisted_Grass_Plant_Flower
+MRUItem16=/Game/Materials/Twisted_Grass_Plant_Flower_Inst
+MRUItem17=/Game/Materials/Twisted_Grass_Plant_Stem
+MRUItem18=/Game/Materials/Twisted_Grass_Plant_Stem_Inst
+MRUItem19=/Game/Materials/Twisted_Grass_Plant_LEaf
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1739,7 +1739,7 @@ MaterialExpressionVertexColor.MaterialExpression=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -1789,9 +1789,9 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2116,6 +2116,7 @@ None=======
 /Game/Materials/Mat_Island5.Mat_Island5=1
 /Game/Materials/T_NewGrass_A.T_NewGrass_A=1
 /Game/Materials/T_ToonGrass_D.T_ToonGrass_D=1
+/Game/Building.Building=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2181,7 +2182,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=267.000 Y=145.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1380.000 Y=744.000
+WindowSize=X=1390.000 Y=754.000
 None=======
 InitiallyMaximized=True
 
@@ -2200,7 +2201,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../IG/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4113,7 +4114,7 @@ K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,
 GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Brush=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-PrimitiveComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+PrimitiveComponent=
 Actor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 ThirdPersonCharacter_C=
 AO1E_C=
@@ -4127,6 +4128,10 @@ PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompone
 AssetViewerSettings=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
+RecentlyPlaced=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_3.M_Tile_Stone_3;
+RecentlyPlaced=/Game/Mat_Hedge.Mat_Hedge;
+RecentlyPlaced=/Game/Building.Building;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/ParticleSystems/NS_BubbleTurbine.NS_BubbleTurbine;
 RecentlyPlaced=/Game/ParticleSystems/P_Waterfall.P_Waterfall;
@@ -4143,10 +4148,6 @@ RecentlyPlaced=/Game/Bubble_Staircase/Bubble_texture.Bubble_texture;
 RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_Combined.Bubble_Garland_Combined;
 RecentlyPlaced=/Game/BubbleTurbine/M_BubbleTurbine_T1.M_BubbleTurbine_T1;
 RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble9.Bubble_Garland_LP_Small_bubble9;
-RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble8.Bubble_Garland_LP_Small_bubble8;
-RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble7.Bubble_Garland_LP_Small_bubble7;
-RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble6.Bubble_Garland_LP_Small_bubble6;
-RecentlyPlaced=/Game/Bubble_Garland/Bubble_Garland_LP_Small_bubble5.Bubble_Garland_LP_Small_bubble5;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
