more building updates
put in movable rocks

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -214,25 +214,25 @@ CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Building
-MRUItem2=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/Materials/Mat_Island5
-MRUItem5=/Game/Materials/Blue_Rose_Plant_Stem
-MRUItem6=/Game/Materials/Blue_Rose_Plant_Stem_Inst
-MRUItem7=/Game/Materials/Blue_Rose_Plant_Flower
-MRUItem8=/Game/Materials/Blue_Rose_Plant_Flower_Inst
-MRUItem9=/Game/Materials/Blue_Rose_Plant_Leaf
-MRUItem10=/Game/Materials/Blue_Rose_Plant_Leaf_Inst
-MRUItem11=/Game/Geometry/Meshes/Plants/Blue_Rose_Plant
-MRUItem12=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
-MRUItem13=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
-MRUItem14=/Game/Geometry/Meshes/Plants/DualFlowers/Forest_Dual_Flowers_LP
-MRUItem15=/Game/Materials/Twisted_Grass_Plant_Flower
-MRUItem16=/Game/Materials/Twisted_Grass_Plant_Flower_Inst
-MRUItem17=/Game/Materials/Twisted_Grass_Plant_Stem
-MRUItem18=/Game/Materials/Twisted_Grass_Plant_Stem_Inst
-MRUItem19=/Game/Materials/Twisted_Grass_Plant_LEaf
+MRUItem1=/Game/MovableRock3
+MRUItem2=/Game/Building
+MRUItem3=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/Materials/Mat_Island5
+MRUItem6=/Game/Materials/Blue_Rose_Plant_Stem
+MRUItem7=/Game/Materials/Blue_Rose_Plant_Stem_Inst
+MRUItem8=/Game/Materials/Blue_Rose_Plant_Flower
+MRUItem9=/Game/Materials/Blue_Rose_Plant_Flower_Inst
+MRUItem10=/Game/Materials/Blue_Rose_Plant_Leaf
+MRUItem11=/Game/Materials/Blue_Rose_Plant_Leaf_Inst
+MRUItem12=/Game/Geometry/Meshes/Plants/Blue_Rose_Plant
+MRUItem13=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
+MRUItem14=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
+MRUItem15=/Game/Geometry/Meshes/Plants/DualFlowers/Forest_Dual_Flowers_LP
+MRUItem16=/Game/Materials/Twisted_Grass_Plant_Flower
+MRUItem17=/Game/Materials/Twisted_Grass_Plant_Flower_Inst
+MRUItem18=/Game/Materials/Twisted_Grass_Plant_Stem
+MRUItem19=/Game/Materials/Twisted_Grass_Plant_Stem_Inst
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1812,10 +1812,35 @@ Mush2__C.Replication=True
 Mush2__C.Input=True
 Mush2__C.Actor=True
 Mush2__C.Materials=True
+MovableRock3_C.Tick=True
+MovableRock3_C.Replication=True
+MovableRock3_C.Rendering=True
+MovableRock3_C.Collision=True
+MovableRock3_C.Actor=True
+MovableRock3_C.Input=True
+MovableRock_C.TransformCommon=True
+MovableRock_C.Rendering=True
+MovableRock_C.Replication=True
+MovableRock_C.Collision=True
+MovableRock_C.Input=True
+MovableRock_C.Actor=True
+MovableRock2_C.TransformCommon=True
+MovableRock2_C.Rendering=True
+MovableRock2_C.Replication=True
+MovableRock2_C.Collision=True
+MovableRock2_C.Input=True
+MovableRock2_C.Actor=True
+MovableRock3_C.TransformCommon=True
+MovableRock4_C.TransformCommon=True
+MovableRock4_C.Rendering=True
+MovableRock4_C.Replication=True
+MovableRock4_C.Collision=True
+MovableRock4_C.Input=True
+MovableRock4_C.Actor=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -1866,8 +1891,8 @@ GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
 PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2193,6 +2218,7 @@ None=======
 /Game/Materials/T_NewGrass_A.T_NewGrass_A=1
 /Game/Materials/T_ToonGrass_D.T_ToonGrass_D=1
 /Game/Building.Building=1
+/Game/MovableRock3.MovableRock3=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2258,7 +2284,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=267.000 Y=145.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1395.000 Y=759.000
+WindowSize=X=1405.000 Y=769.000
 None=======
 InitiallyMaximized=True
 
@@ -4204,6 +4230,10 @@ PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompone
 AssetViewerSettings=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
 
 [PlacementMode]
+RecentlyPlaced=/Game/MovableRock4.MovableRock4;
+RecentlyPlaced=/Game/MovableRock3.MovableRock3;
+RecentlyPlaced=/Game/Blueprints/MovableRock2.MovableRock2;
+RecentlyPlaced=/Game/Blueprints/MovableRock.MovableRock;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -4220,10 +4250,6 @@ RecentlyPlaced=/Game/Mat_Hedge.Mat_Hedge;
 RecentlyPlaced=/Game/Building.Building;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/ParticleSystems/NS_BubbleTurbine.NS_BubbleTurbine;
-RecentlyPlaced=/Game/ParticleSystems/P_Waterfall.P_Waterfall;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Materials/P_FountainBubbles.P_FountainBubbles;
-RecentlyPlaced=/Game/Materials/P_FountainBubbles3.P_FountainBubbles3;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
