Animation fix Character/Soap Implement
.

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -201,7 +201,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Sewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -210,29 +210,29 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/MovableRock3
-MRUItem2=/Game/Building
-MRUItem3=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/Materials/Mat_Island5
-MRUItem6=/Game/Materials/Blue_Rose_Plant_Stem
-MRUItem7=/Game/Materials/Blue_Rose_Plant_Stem_Inst
-MRUItem8=/Game/Materials/Blue_Rose_Plant_Flower
-MRUItem9=/Game/Materials/Blue_Rose_Plant_Flower_Inst
-MRUItem10=/Game/Materials/Blue_Rose_Plant_Leaf
-MRUItem11=/Game/Materials/Blue_Rose_Plant_Leaf_Inst
-MRUItem12=/Game/Geometry/Meshes/Plants/Blue_Rose_Plant
-MRUItem13=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers
-MRUItem14=/Game/Geometry/Meshes/Plants/DualFlowers/DualFlowers_Inst
-MRUItem15=/Game/Geometry/Meshes/Plants/DualFlowers/Forest_Dual_Flowers_LP
-MRUItem16=/Game/Materials/Twisted_Grass_Plant_Flower
-MRUItem17=/Game/Materials/Twisted_Grass_Plant_Flower_Inst
-MRUItem18=/Game/Materials/Twisted_Grass_Plant_Stem
-MRUItem19=/Game/Materials/Twisted_Grass_Plant_Stem_Inst
+MRUItem0=/Game/Animation/Soap_Chara/Soap_Anim
+MRUItem1=/Game/Animation/Soap_Chara/Johnson_sad_idle__Anim
+MRUItem2=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem3=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem4=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem5=/Game/Animation/Soap_Chara/Soap_Character
+MRUItem6=/Game/Animation/Soap_Chara/Soap_Chara
+MRUItem7=/Game/Levels/Sewer
+MRUItem8=/Game/Animation/Character/Jump_Anim_mixamo_com
+MRUItem9=/Game/Animation/Character/Jumping_Anim_mixamo_com
+MRUItem10=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
+MRUItem11=/Game/Player/Movement
+MRUItem12=/Game/Animation/Character/Standard_Run_Anim_mixamo_com
+MRUItem13=/Game/Player/PlayerCharacter
+MRUItem14=/Game/Player/Player_BP
+MRUItem15=/Game/Levels/Forest
+MRUItem16=/Game/MovableRock3
+MRUItem17=/Game/Building
+MRUItem18=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1837,17 +1837,73 @@ MovableRock4_C.Replication=True
 MovableRock4_C.Collision=True
 MovableRock4_C.Input=True
 MovableRock4_C.Actor=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimStateNode.Events=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+BlendSpace.InputInterpolation=True
+BlendSpace.Axis Settings=True
+BlendSpace.AdditiveSettings=True
+BlendSpace.BlendSamples=True
+BlendSpace.Animation=True
+BlendSpace.SampleInterpolation=True
+BlendSpace.AnimationNotifies=True
+BlendSpace.MetaData=True
+BlendSpace.Thumbnail=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_TransitionResult.Result=True
+Soap_Chara_C.Tick=True
+Soap_Chara_C.Replication=True
+Soap_Chara_C.Rendering=True
+Soap_Chara_C.Collision=True
+Soap_Chara_C.Actor=True
+Soap_Chara_C.Input=True
+Soap_Character_C.Character=True
+Soap_Character_C.Tick=True
+Soap_Character_C.Camera=True
+Soap_Character_C.Pawn=True
+Soap_Character_C.Replication=True
+Soap_Character_C.Rendering=True
+Soap_Character_C.Collision=True
+Soap_Character_C.Actor=True
+Soap_Character_C.Input=True
+ChefGnome_C.Default=True
+ChefGnome_C.Tick=True
+ChefGnome_C.Character=True
+ChefGnome_C.Camera=True
+ChefGnome_C.Pawn=True
+ChefGnome_C.Replication=True
+ChefGnome_C.Rendering=True
+ChefGnome_C.Collision=True
+ChefGnome_C.Actor=True
+ChefGnome_C.Input=True
+Chef_Ani_C.Default=True
+Chef_Ani_C.RootMotion=True
+Chef_Ani_C.Notifies=True
+Soap_Anim_C.RootMotion=True
+Soap_Anim_C.Notifies=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character=
+Character="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn=
+Pawn="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -1890,9 +1946,9 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -1906,9 +1962,9 @@ Visual=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SkeletalMesh=
 StreamableRenderAsset=
@@ -1920,6 +1976,15 @@ WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 SphereComponent=
 StaticMesh=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
+AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
+AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
+AnimGraphNode_Base=
+K2Node=
+EdGraphNode=
+AnimGraphNode_BlendSpacePlayer="\"Object.Settings.SyncGroup\" "
+AnimGraphNode_BlendSpaceBase="\"Object.Settings.SyncGroup\" "
+Soap_Character_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+ChefGnome_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -2219,6 +2284,13 @@ None=======
 /Game/Materials/T_ToonGrass_D.T_ToonGrass_D=1
 /Game/Building.Building=1
 /Game/MovableRock3.MovableRock3=1
+/Game/Animation/Character/Jump_Anim_mixamo_com.Jump_Anim_mixamo_com=1
+/Game/Animation/Character/Jumping_Anim_mixamo_com.Jumping_Anim_mixamo_com=1
+/Game/Player/Movement.Movement=1
+/Game/Gnome_Animated/ChefGnome/ChefGnome.ChefGnome=1
+/Game/Gnome_Animated/ChefGnome/Chef_Blend.Chef_Blend=1
+/Game/Gnome_Animated/ChefGnome/Chef_Ani.Chef_Ani=1
+/Game/Animation/Soap_Chara/Johnson_sad_idle__Anim.Johnson_sad_idle__Anim=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3870,12 +3942,12 @@ DistCurveEditor.TimeStamp=2021.02.15-00.29.15
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/NewMap
-MRUItem4=/Game/Levels/testYellow
-MRUItem5=/Game/Levels/Sewer
+MRUItem0=/Game/Levels/Sewer
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/NewMap
+MRUItem5=/Game/Levels/testYellow
 MRUItem6=/Game/Levels/testGreen
 MRUItem7=/Game/Levels/TechDemo
 MRUItem8=/Game/Levels/testMagenta
@@ -3885,7 +3957,7 @@ MRUItem11=/Game/Levels/Green_Paint
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4228,6 +4300,9 @@ MySaveGame_C=
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 AssetViewerSettings=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
+PersonaPreviewSceneDescription=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
+PreviewMeshCollection=
+Player_BP_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/MovableRock4.MovableRock4;
@@ -4451,7 +4526,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
